--- a/css/style.css
+++ b/css/style.css
@@ -210,6 +210,8 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
+  color: #fff;
+  font-size: 20px;
   position: absolute;
   left: 0px;
   top: 0px;
