--- a/css/style.css
+++ b/css/style.css
@@ -64,8 +64,13 @@ body {
   padding: 100px 0;
 }
 
+.ghlink {
+  transform: scale(1.8);
+}
+
 .about-image {
   max-width: 100%;
+  border-radius: 50%;
 }
 
 .skills-section,
